--- a/src/frontend/src/css/AboutView.css
+++ b/src/frontend/src/css/AboutView.css
@@ -12,11 +12,13 @@
   margin-bottom: 40px;
 }
 
-
+.about-header h1 {
+  color: #2c3e50;
+}
 
 .about-description {
   font-size: 1.1rem;
-
+  color: #34495e;
 }
 
 /* Container for each section */
@@ -40,12 +42,12 @@
 }
 
 .section-content h2 {
-
+  color: #34495e;
   font-weight: bold;
 }
 
 .section-content p {
-
+  color: #7f8c8d;
 }
 
 /* Contact Section */
@@ -55,7 +57,7 @@
 }
 
 .contact-container h2 {
-
+  color: #34495e;
   font-weight: bold;
   margin-bottom: 20px;
 }
@@ -67,7 +69,7 @@
 .contact-content p {
   margin: 5px 0;
   font-size: 1rem;
-
+  color: #7f8c8d;
 }
 
 .contact-map-image {
